# linaro_build_template

./: CMakeLists.txt  build.sh  toolchain_linux.cmake
src/: main.c
